# MoreObjectInfo

./: CMakeLists.txt  README.md  about.md  changelog.md  mod.json
.github/workflows/: build.yml  release.yml
src/: EditorUI.cpp  GJRotationControl.cpp  GJScaleControl.cpp  GJTransformControl.cpp  MoreObjectInfo.cpp  MoreObjectInfo.hpp  format.hpp  main.cpp
src/hooks/: EditorUI.cpp  GJRotationControl.cpp  GJScaleControl.cpp  GJTransformControl.cpp
